--- a/package.json
+++ b/package.json
@@ -15,28 +15,29 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "classnames": "^2.2.6",
-    "ramda": "^0.27.1",
     "react": "^17.0.2"
   },
   "devDependencies": {
+    "@emotion/jest": "^11.7.1",
     "@types/classnames": "^2.2.11",
-    "@types/jest": "^26.0.14",
-    "@types/ramda": "^0.27.32",
-    "@types/react": "^16.9.51",
-    "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
-    "eslint": "^7.10.0",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "eslint": "^8.8.0",
     "eslint-plugin-deprecation": "^1.1.0",
-    "eslint-plugin-functional": "^3.0.2",
+    "eslint-plugin-functional": "^4.1.1",
     "eslint-plugin-import": "^2.22.1",
     "husky": "^4.3.0",
-    "jest": "^26.4.2",
+    "jest": "^27.4.7",
+    "jest-css-modules": "^2.1.0",
     "prettier": "^2.1.2",
-    "ts-jest": "^26.4.1",
-    "ts-loader": "^8.0.4",
-    "typescript": "4.2.2"
+    "ts-jest": "^27.1.3",
+    "typescript": "4.5.5"
   },
   "jest": {
     "testEnvironment": "node"
