--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@emotion/jest": "^11.7.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.39",
