--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "classnames": "^2.2.6",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "superagent": "^7.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@emotion/jest": "^11.7.1",
@@ -26,8 +28,11 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^27.4.0",
+    "@types/nock": "^11.1.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/superagent": "^4.1.15",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.8.0",
@@ -37,6 +42,7 @@
     "husky": "^4.3.0",
     "jest": "^27.4.7",
     "jest-css-modules": "^2.1.0",
+    "nock": "^13.2.4",
     "prettier": "^2.1.2",
     "ts-jest": "^27.1.3",
     "typescript": "4.5.5"
