--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.6.0",
     "classnames": "^2.2.6",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "superagent": "^7.1.1",
     "uuid": "^8.3.2"
   },
