--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "node": ">=14"
   },
   "scripts": {
+    "db:up": "make -C ./infra up",
+    "db:down": "make -C ./infra down",
+    "db:reset": "make -C ./infra reset",
+    "db:seed": "ts-node --files --project tsconfig.json ./test/seed",
     "test": "jest --maxWorkers=4 src --coverage",
     "lint": "yarn eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write 'src/**/*.{js,ts,tsx,json,css,md}'",
@@ -18,6 +22,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "classnames": "^2.2.6",
+    "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "superagent": "^7.1.1",
@@ -30,6 +35,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^27.4.0",
+    "@types/mysql": "^2.15.20",
     "@types/nock": "^11.1.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -47,6 +53,7 @@
     "nock": "^13.2.4",
     "prettier": "^2.1.2",
     "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
     "typescript": "4.5.5"
   }
 }
