--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "module": "ES2015",
+    "module": "commonjs",
     "lib": ["es2015", "es2016", "es2017", "es2018", "dom", "es6", "dom.iterable", "scripthost"],
     "declaration": true,
     "sourceMap": true,
