--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql": "^2.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "superagent": "^7.1.1",
     "uuid": "^8.3.2"
   },
@@ -40,6 +41,7 @@
     "@types/nock": "^11.1.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.1.7",
     "@types/superagent": "^4.1.15",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
